# shine

./: README.md  dune-project  shine.opam
_build/: .db  .digest-db  log
_build/default/: shine.dune-package  shine.install  shine.opam
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: cli.re.ml  dune  shine.cma  shine.cmxa  shine.cmxs  shine.ml-gen
_build/default/lib/.merlin-conf/: lib-shine
_build/default/lib/.shine.objs/: cli.re.ml.d
_build/default/lib/.shine.objs/byte/: shine.cmi  shine.cmo  shine.cmt  shine__Cli.cmi  shine__Cli.cmo  shine__Cli.cmt
_build/default/lib/.shine.objs/native/: shine.cmx  shine__Cli.cmx
_build/default/test/.formatted/: dune
_build/default/test/.merlin-conf/: exe-shien
_build/default/test/.shien.eobjs/byte/: dune__exe__Shien.cmi  dune__exe__Shien.cmti
_build/default/test/.shien.eobjs/native/: dune__exe__Shien.cmx
_build/install/default/lib/shine/: META  dune-package  opam
lib/: cli.re
